# s-rlbwt

./: CMakeLists.txt  README.md  s-rlbwt-build.cpp  s-rlbwt-count.cpp  s-rlbwt-locate.cpp  s-rlbwt-space.cpp
internal/: definitions.h  huff_string.h  rle_string.h  s_rlbwt.h  sparse_sd_vector.h  succinct_bit_vector.h  utils.h
